# zerocenter-messenger

./: .gitignore  ABOUT.html  ANALYSIS.html  BEGET_SETUP.md  Cargo.toml  DEV_CONTEXT.md  ENTITY.md  FEATURES.html  IDEA1_ME55AGER.html  ME55AG.html  MESSENGERS_COMPARISON.html  README.md  RELAY.md  ROADMAP.html  TEST_GUIDE.html  WHY_ME55.html  build.rs  iconz.html  me55_web.html  project.html  project.txt  tauri.conf.json  test.bat
.claude/: ENTITY_TEMPLATE.md  settings.local.json
.github/workflows/: ci.yml
audit/: CRYPTO.md  INVARIANTS.md  README.md  SELF_AUDIT.md  THREAT_MODEL.md
bats/: README.md  alice.bat  bob.bat  carol.bat  gui-alice-public.bat  gui-alice-via-relay.bat  gui-alice.bat  gui-bob-public.bat  gui-bob-via-relay.bat  gui-bob.bat  gui.bat  me55-public.bat
capabilities/: default.json
plans/: ROADMAP.md
release/: README.md
src/: cli.rs  entry.rs  lib.rs  main.rs  serde_helpers.rs
src/core/: config.rs  identity.rs  mod.rs  node.rs
src/crypto/: keyring.rs  megolm.rs  mod.rs  ratchet.rs  sealed.rs  x3dh.rs
src/gui/: app.rs
src/network/: behaviour.rs  bootstrap.rs  mailbox.rs  mod.rs  scramble.rs
src/protocol/: group.rs  message.rs  mod.rs
src/storage/: mod.rs  store.rs
