[package]
name = "ME55-messenger"
version = "0.1.0"
edition = "2021"
authors = ["ME55 Team"]
description = "Censorship-Resistant, Zero-Trust, Leaderless P2P Messenger"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# P2P networking
# NOTE: "quic" is temporarily disabled because it transitively requires `ring`,
# whose C build script crashes cl.exe on some local Windows toolchains.
# Re-enable once the MSVC toolchain is updated (VS Build Tools 2022+).
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    # "quic",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
    "mdns",
    "relay",
    "identify",
    "dns",
    "macros",
    "request-response",
    "cbor"
] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# `static_secrets` enables `StaticSecret` (long-term X25519 key we can
# serialize). Required for the Phase 3 signed prekey on Identity.
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
# Phase 3 — Double Ratchet primitives. All five crates are already in
# Cargo.lock (pulled transitively by libp2p / ed25519-dalek), so listing
# them here adds nothing to the dep graph; we just need direct visibility.
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }

# Phase 3.5 — at-rest hardening.
# `keyring` is the new dep; it brings OS-native secret storage
# (Windows Credential Manager / macOS Keychain / Linux secret-service).
# `hex` is already in Cargo.lock transitively — used to encode the
# data-encryption key as a printable string for the keyring API.
keyring = "3"
hex = "0.4"

# Phase 4a — obfuscation transport (ScrambleStream).
# `chacha20` is the raw stream cipher (transitively in lock already via
# `chacha20poly1305`). Direct dep needed to import the cipher type.
chacha20 = "0.9"

# Phase 4c.1 — NTOR-style hidden-nonce handshake. Exposes elligator2
# encode/decode for Curve25519 points, which `curve25519-dalek` 4.1
# implements internally but only behind `pub(crate)`. The `Randomized`
# variant in this fork (jmwample/curve25519-dalek) ensures the
# representative bytes are computationally indistinguishable from
# uniform random — exactly what we need to replace the in-clear
# 12-byte nonce header with a 32-byte uniform handshake. Alpha
# version pinned intentionally; we use only `to_representative` /
# `from_representative` so the surface is small.
curve25519-elligator2 = { version = "0.1.0-alpha.2", default-features = false, features = ["elligator2", "alloc", "zeroize"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage
rusqlite = { version = "0.30", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Futures executor
futures = "0.3"

# Base58 encoding for peer IDs
bs58 = "0.5"

# Phase 4 — Tauri 2.x webview frontend. Optional; pulled in only by
# the `gui` feature so the default headless CLI build stays slim.
#
# `custom-protocol` is REQUIRED on release builds via plain `cargo build`.
# Without it `tauri/build.rs` sets `cfg(dev)` regardless of cargo profile,
# and `generate_context!()` embeds the `devUrl` (localhost:1420) instead
# of the `frontendDist` assets — the webview then fails with
# ERR_CONNECTION_REFUSED. `cargo tauri build` would enable this feature
# automatically; we don't use that CLI, so we set it explicitly.
tauri = { version = "2", optional = true, features = ["custom-protocol"] }

[build-dependencies]
# `tauri-build` runs at build time when `gui` is on; it parses
# `tauri.conf.json`, generates an embedded Context for the runtime,
# and validates capabilities. The build script (`build.rs`) gates the
# call behind the same feature so default builds skip it.
tauri-build = { version = "2", optional = true }

[features]
# Tauri webview UI. Off by default — enabling it pulls Tauri 2.x with
# its ~100-crate dep tree and a build script. The `gui` module's
# implementation is gated on this feature so the default CLI build
# stays slim.
#
# Build: `cargo build --release --features gui`. Run: `ME55 --gui`.
# The Tauri runtime + build script are pulled in only when this is on,
# courtesy of the `optional = true` flags on the deps below.
gui = ["dep:tauri", "dep:tauri-build"]

[dev-dependencies]
# Temp dirs for identity/load-roundtrip tests.
tempfile = "3"
# `compat` feature lets us bridge `tokio::io::duplex` (the natural way
# to spin up an in-memory paired stream) into the `futures::io` traits
# `ScrambleStream` is implemented over.
tokio-util = { version = "0.7", features = ["compat"] }

[[bin]]
name = "ME55"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
